# xtee

./: .cursorrules  .gitignore  Dockerfile  README.md  biome.json  bun.lockb  devbox.json  devenv.nix  devenv.yaml  flake.nix  next.config.ts  package.json  result  tailwind.config.ts  tsconfig.json  xtee.code-workspace
.github/workflows/: build.yml
arduino/: arduino.ino  platformio.ini
arduino/lib/actuator/: actuator.hpp
arduino/lib/common/: common.hpp  pins.hpp  settings.hpp
arduino/lib/components/: actuator.cpp  actuator.hpp  components.hpp  motor.cpp  motor.hpp  pins.hpp  scale.cpp  scale.hpp
arduino/lib/crc/: crc.cpp  crc.hpp
arduino/lib/motor/: motor.cpp  motor.hpp
arduino/lib/protocol/: protocol.cpp  protocol.hpp
arduino/lib/scale/: scale.cpp
arduino/src/: main.cpp
config/dietpi/: config.txt  dietpi.txt
nix/hosts/raspberrypi4/: default.nix  hardware-configuration.nix
nix/pkgs/: default.nix
nix/pkgs/xtee/: default.nix  deps.nix
scripts/: provisioning.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cmd.rs  config.rs  error.rs  event.rs  filter.rs  lib.rs  main.rs  protocol.rs  router.rs  setup.rs  store.rs  tuner.rs
src-tauri/src/actor/: actuator.rs  controller.rs  master.rs  mod.rs  motor.rs  mux.rs  operator.rs
src-tauri/src/api/: cmd.rs  mod.rs  router.rs
src-tauri/src/components/: actuator.rs  controller.rs  master.rs  mod.rs  motor.rs  mux.rs
src-tauri/src/core/: mod.rs  protocol.rs  store.rs
src-tauri/src/core/components/: actuator.rs  controller.rs  master.rs  mod.rs  motor.rs  mux.rs
src-tauri/src/core/components/actuator/: config.rs  handlers.rs  messages.rs  mod.rs  state.rs
src-tauri/src/core/components/controller/: handlers.rs  messages.rs  mod.rs  state.rs
src-tauri/src/core/components/motor/: config.rs  handlers.rs  messages.rs  mod.rs  state.rs
src-tauri/src/utils/: error.rs
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/settings/: layout.tsx  page.tsx
src/app/settings/actuator/: page.tsx
src/app/settings/debug/: page.tsx
src/app/settings/general/: page.tsx
src/app/settings/motors/: page.tsx
src/components/: controllers-table.tsx  current-load.tsx  defaults-provider.tsx  dialog-number-input.tsx  functions-selector.tsx  header.tsx  json-viewer.tsx  load-visualizer.tsx  manual-actuator.tsx  mode-selector.tsx  motor-status.tsx  motors-status.tsx  over-spinner.tsx  prefetch-provider.tsx  secondary-menu.tsx  state-provider.tsx  status-provider.tsx  step-actuator.tsx  touch-number-input.tsx
src/components/actuator/: auto-actuator.tsx  control-actuator.tsx  current-load.tsx  general-settings.tsx  manual-actuator.tsx  pid-settings.tsx  step-actuator.tsx  stop-actuator.tsx  tuner-settings.tsx
src/components/modals/: connect-device-modal.tsx  tune-actuator.tsx
src/components/motors/: control-motors.tsx  limits-settings.tsx  motor-lock.tsx  motor-status.tsx  motors-status.tsx  speeds-settings.tsx
src/components/motors-modes/: manual.tsx  serving.tsx  twisting.tsx
src/components/motors/modes/: manual.tsx  serving.tsx  twisting.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  card.tsx  chart.tsx  checkbox.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  icons.tsx  input.tsx  label.tsx  navigation-menu.tsx  popover.tsx  progress.tsx  quantity-input.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  slider.tsx  submit-button.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx  toggle.tsx  (+3 more)
src/hooks/: use-disable-defaults.ts  use-event.ts  use-lock-scroll.ts  use-long-press.ts  use-shutdown.ts  use-zoom.ts
src/lib/: client.ts  constants.ts  store.ts
src/state/: index.ts
src/styles/: globals.css
src/types/: bindings.ts  event.ts  helpers.ts  serial.ts
system/: flake.nix
