[package]
name = "xtee"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xtee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
typeshare = "1"
serde_json = "1"

rspc = { version = "0.3.1", features = ["tracing"] }
rspc-tauri = { version = "0.1.1" }
specta = { version = "2.0.0-rc.20", features = ["derive"] }

openssl-sys = { version = "0.9", features = ["vendored"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
ractor = "0.13.5"
deku = { version = "0.18.1" }
crc = "3.2.1"
cobs-codec = "0.1.0"
async-stream = "0.3.6"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.13"
ractor_actors = "0.4.4"
tokio-serial = "5.4.4"
serialport = { version = "4", features = ["serde"] }
futures = "0.3.31"
thiserror = "2.0.6"
anyhow = "1.0.94"
pid-lite = "1.2.0"
time = { version = "0", features = ['macros', 'serde'] }
tracing = { version = "0", features = ["log", "release_max_level_info"] }
tracing-subscriber = { version = "0", features = [
  'time',
  'env-filter',
  'json',
] }
nanoid = "0.4.0"
