[package]
name = "xtee"
version = "2.0.2"
description = "A Tauri App"
authors = ["marco.condrache@mossida.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xtee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

rspc = { version = "0.3.1", features = ["tracing"] }
rspc-tauri = { version = "0.1.1" }
specta = { version = "2.0.0-rc.20", features = ["derive"] }

ractor = "0.14.2"
ractor_actors = "0.4.6"

deku = { version = "0.18.1", default-features = false, features = ["std"] }
crc = "3.2.1"
cobs-codec = "0.1.0"

tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
tokio-serial = "5.4.4"

serialport = { version = "4", features = ["serde"] }
pid-lite = "1.2.0"

tracing = { version = "0", features = ["log", "release_max_level_info"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0", features = ["json"] }

futures = "0.3.31"
thiserror = "2.0.9"
anyhow = "1.0.95"
